manifests/dev/opentelemetry/Namespace-opentelemetry.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: opentelemetry
