manifests/dev/opentelemetry/DaemonSet-opentelemetry-collector-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/component: agent-collector
    app.kubernetes.io/instance: opentelemetry-collector
    app.kubernetes.io/name: opentelemetry-collector
    app.kubernetes.io/part-of: opentelemetry-collector
  name: opentelemetry-collector-agent
  namespace: opentelemetry
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: opentelemetry-collector
      app.kubernetes.io/name: opentelemetry-collector
      component: agent-collector
  template:
    metadata:
      annotations:
        checksum/config: ee4824a8d5e72842d2c2bed04021eda9d171c4dde6a53358309c1b9db2241844
      labels:
        app.kubernetes.io/instance: opentelemetry-collector
        app.kubernetes.io/name: opentelemetry-collector
        component: agent-collector
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - --config=/conf/relay.yaml
          image: ghcr.io/open-telemetry/opentelemetry-collector-releases/opentelemetry-collector-k8s:0.151.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: 13133
          name: opentelemetry-collector
          ports:
            - containerPort: 6831
              hostPort: 6831
              name: jaeger-compact
              protocol: UDP
            - containerPort: 14250
              hostPort: 14250
              name: jaeger-grpc
              protocol: TCP
            - containerPort: 14268
              hostPort: 14268
              name: jaeger-thrift
              protocol: TCP
            - containerPort: 4317
              hostPort: 4317
              name: otlp
              protocol: TCP
            - containerPort: 4318
              hostPort: 4318
              name: otlp-http
              protocol: TCP
            - containerPort: 9411
              hostPort: 9411
              name: zipkin
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 13133
          securityContext: {}
          volumeMounts:
            - mountPath: /conf
              name: opentelemetry-collector-configmap
            - mountPath: /var/log/pods
              name: varlogpods
              readOnly: true
            - mountPath: /var/lib/docker/containers
              name: varlibdockercontainers
              readOnly: true
            - mountPath: /hostfs
              mountPropagation: HostToContainer
              name: hostfs
              readOnly: true
      hostNetwork: false
      hostPID: false
      securityContext: {}
      serviceAccountName: opentelemetry-collector
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            items:
              - key: relay
                path: relay.yaml
            name: opentelemetry-collector-agent
          name: opentelemetry-collector-configmap
        - hostPath:
            path: /var/log/pods
          name: varlogpods
        - hostPath:
            path: /var/lib/docker/containers
          name: varlibdockercontainers
        - hostPath:
            path: /
          name: hostfs
  updateStrategy:
    type: RollingUpdate
